# backend/docs/openapi.yaml
@@ -184,6 +184,25 @@ components:
       required:
         - chat
       type: object
+    GetChatSummariesResponseBody:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          examples:
+            - https://example.com/schemas/GetChatSummariesResponseBody.json
+          format: uri
+          readOnly: true
+          type: string
+        summaries:
+          items:
+            $ref: "#/components/schemas/ChatSummaryDTO"
+          type:
+            - array
+            - "null"
+      required:
+        - summaries
+      type: object
     GetChatSummaryResponseBody:
       additionalProperties: false
       properties:
@@ -373,6 +392,23 @@ paths:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
       summary: Get API facebook chats
+  /api/facebook/chats/summaries:
+    get:
+      operationId: get-api-facebook-chats-summaries
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GetChatSummariesResponseBody"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: Get API facebook chats summaries
   /api/facebook/chats/{id}:
     get:
       operationId: get-api-facebook-chats-by-id
